// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial state 1`] = `
Object {
  "breadcrumbBar": Object {
    "currentPage": null,
    "isLoadingResources": false,
    "isSwitcherOpen": false,
    "pages": null,
    "requestError": null,
    "resourceSwitcherItems": Array [],
    "resourceUrl": null,
    "searchQuery": "",
    "titleReplacement": null,
  },
}
`;

exports[`switcher after next page 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "id": "1",
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "id": "2",
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "id": "3",
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 2,
          "pages": 1.5,
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 2,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher after prev page 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "id": "1",
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "id": "2",
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "id": "3",
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher after search change 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "id": "1",
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "id": "2",
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "id": "3",
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "text",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher after search clear  1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "id": "1",
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "id": "2",
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "id": "3",
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher closed 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "type": "BREADCRUMB_BAR_TOGGLE_SWITCHER",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": false,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher opened 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "options": Object {
            "page": 1,
            "searchQuery": "",
          },
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_REQUEST",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": null,
      "isLoadingResources": true,
      "isSwitcherOpen": true,
      "pages": null,
      "requestError": null,
      "resourceSwitcherItems": Array [],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;

exports[`switcher opened and loaded 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "items": Array [
            Object {
              "id": "1",
              "name": "name-1",
              "url": "some/url/1",
            },
            Object {
              "id": "2",
              "name": "name-2",
              "url": "some/url/2",
            },
            Object {
              "id": "3",
              "name": "name-3",
              "url": "some/url/3",
            },
          ],
          "page": 1,
          "pages": 1.5,
          "resourceUrl": "some/url",
        },
        "type": "BREADCRUMB_BAR_RESOURCES_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "breadcrumbBar": Object {
      "currentPage": 1,
      "isLoadingResources": false,
      "isSwitcherOpen": true,
      "pages": 1.5,
      "requestError": null,
      "resourceSwitcherItems": Array [
        Object {
          "id": "1",
          "name": "name-1",
          "url": "some/url/1",
        },
        Object {
          "id": "2",
          "name": "name-2",
          "url": "some/url/2",
        },
        Object {
          "id": "3",
          "name": "name-3",
          "url": "some/url/3",
        },
      ],
      "resourceUrl": "some/url",
      "searchQuery": "",
      "titleReplacement": null,
    },
  },
}
`;
